# TDAT3020

./: .gitignore  README.md
04_low_level/c/: Makefile
04_low_level/cpp/: Makefile  sanitizer.cpp
04_low_level/nasm/: Makefile  demo.sh  hello  hello.s  notes.md
04_low_level/rust/: Cargo.toml
05_shell_scripting/: 01_wget.sh  02_compress.sh  04_mkcopy.sh  05_subshells.md
05_shell_scripting/03/: README.md  flyttjpg.sh  rydd.sh
06_fuzzing/: .gitlab-ci.yml  main.c  sanitizer.c
06_fuzzing/tests/: sanitizer_fuzzer_test.c  sanitizer_test.c
08_authentication/bruteforce/: README.md  cracker.cpp
09_firewall/: firewallsetup.sh  squid.conf
10_ctf1/ctf/: README.md
11_mail/: .gitignore  README.md  mailcheck.sh
12_ctf2/ctf/: README.md  (+2 more)
13_ids/: README.md
17_wifi/: README.md
19_admin/: README.md
21_pentest/: README.md
23_case/: Makefile  README.md
K01_number_theory/: Makefile  README.md  hill.py  kshift.hs  multtable.py
K14_number_theory/: .gitignore  Makefile  README.md  Stuff.hs  vigenere.hs
K16_stream_and_hash/: Makefile  README.md  aes.py  aes_manual.py  autokey.hs  cbcmac.hs  hmac.py
K18_rsa/: README.md  rsa.py
K20_el_gamal/: README.md  dlp.py
N05_shell_scripting/: 05_subshells.md  06_crontab
N11_mail/: mailcheck.sh
N17_wifi/: .gitignore  README.md
P02_bug_fixing/: README.md
P04_low_level/: remember
P06_fuzzing/: CMakeLists.txt  README.md  sanitizer.h
P06_fuzzing/tests/: CMakeLists.txt  sanitizer_fuzzer_test.c
P08_authentication/bruteforce/: CMakeLists.txt  README.md  cracker.cpp
cryptools/: README.md  cryptools.py  elgamal.py  rsa.py
exam/: README.md
(+45 files in other folders)
